--- a/index.html
+++ b/index.html
@@ -17,25 +17,33 @@
 	</head>
 	<body>
 		<h1>My Geography 485L/585L Home Page</h1>
-		<p>About me</p>
-		<p>Why I'm taking the course</p>
+		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
+		Computer Science. </p>
+		
+		<p>I was interested in taking this course because it allowed me to apply my CS knowledge to geography.</p>
 		
 		<h2>Topics I'm interested in</h2>
 		<ul>
-			<li>topic 1</li>
-			<li>topic 2</li>
-			<li>more topics ...</li>
+			<li>Machine Learning</li>
+			<li>Soft Robotics</li>
+			<li>Cyber Security</li>
+			<li>Geographic Information Science</li>
+			<li>Swarm Robotics</li>
+			<li>Military History</li>
+			<li>Biomedical Engineering</li>
 		</ul>
 		
 		<h2>Types of data I have worked with (themes & formats)</h2>
 		<ul>
-			<li>data type 1</li>
-			<li>data type 2</li>
-			<li>more data types ...</li>
+			<li>Raster</li>
+			<li>Vector</li>
+			<li>.pcap</li>
+			<li>Excell Data Spread Sheets</li>
+			
 		</ul>
 		
 		<h2>Milestones</h2>
-		<p><a href="">Hello World</a></p>
+		<p><a href="hello-world.html">Hello World</a></p>
 		<p><a href="">Milestone 2</a></p>
 		
 		<h2>Deep Dives</h2>
