--- a/index_styled.html
+++ b/index_styled.html
@@ -18,11 +18,14 @@
     margin-right: 0px;
     margin-left: 280px;
     }
+			p.cursive {
+    font-style: cursive;
+}
 			
 		</style>
 	</head>
 	<body>
-		<div><h1>My Geography 485L/585L Home Page</h1></div>
+		<p.cursive><div><h1>My Geography 485L/585L Home Page</h1></div></p.cursive>
 		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
 		Computer Science. </p>
 		
