--- a/index_styled.html
+++ b/index_styled.html
@@ -16,16 +16,16 @@
     margin-top: 50px;
     margin-bottom: 100px;
     margin-right: 0px;
-    margin-left: 280px;
+    margin-left: 310px;
     }
-			p.cursive {
-    font-style: cursive;
+			p.italic {
+    font-style: italic;
 }
 			
 		</style>
 	</head>
 	<body>
-		<p.cursive><div><h1>My Geography 485L/585L Home Page</h1></div></p.cursive>
+		<p class=italic><div><h1>My Geography 485L/585L Home Page</h1></div></p>
 		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
 		Computer Science. </p>
 		
