--- a/index_styled.html
+++ b/index_styled.html
@@ -16,7 +16,7 @@
     margin-top: 50px;
     margin-bottom: 100px;
     margin-right: 0px;
-    margin-left: 300px;
+    margin-left: 330px;
     }
 			p.italic {
     font-style: italic;
@@ -25,7 +25,7 @@
 		</style>
 	</head>
 	<body>
-		<p class=italic><div><h1>My Geography 485L/585L Home Page</h1></div></p>
+		<h1><div><pclass=italic>My Geography 485L/585L Home Page</p></div></h1>
 		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
 		Computer Science. </p>
 		
