--- a/index_styled.html
+++ b/index_styled.html
@@ -25,6 +25,7 @@
 		</style>
 	</head>
 	<body>
+		background-color: lightblue;
 		<h1><div><p class=italic>My Geography 485L/585L Home Page</p></div></h1>
 		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
 		Computer Science. </p>
