--- a/index_styled.html
+++ b/index_styled.html
@@ -18,6 +18,9 @@
     margin-right: 0px;
     margin-left: 330px;
     }
+			body {
+    background-color: lightblue;
+}
 			p.italic {
     font-style: italic;
 }
@@ -25,7 +28,7 @@
 		</style>
 	</head>
 	<body>
-		background-color: lightblue;
+		
 		<h1><div><p class=italic>My Geography 485L/585L Home Page</p></div></h1>
 		<p>My name is Stewart Miller. Im a double major in History and Geography with a focus on GIS. I also have a minor in 
 		Computer Science. </p>
