--- a/index_styled.html
+++ b/index_styled.html
@@ -19,7 +19,7 @@
     margin-left: 330px;
     }
 			body {
-    background-color: lightblue;
+    background-color: grey;
 }
 			p.italic {
     font-style: italic;
