--- a/base_map.html
+++ b/base_map.html
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJMMFp8QUYa88XJz9DPBRp-9sjhbRcFiA &callback=initMap"
     async defer></script>
   </body>
 </html>
