--- a/base_map.html
+++ b/base_map.html
@@ -27,6 +27,7 @@
           center: {lat: 39.000, lng: -105.500},
           zoom: 8
         });
+        map.setMapTypeId(google.maps.MapTypeId.TERRAIN
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJMMFp8QUYa88XJz9DPBRp-9sjhbRcFiA &callback=initMap"
