--- a/base_map.html
+++ b/base_map.html
@@ -26,8 +26,9 @@
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 39.000, lng: -105.500},
           zoom: 8
+           mapTypeId: google.maps.MapTypeId.TERRAIN
         });
-        map.setMapTypeId(google.maps.MapTypeId.TERRAIN
+        
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJMMFp8QUYa88XJz9DPBRp-9sjhbRcFiA &callback=initMap"
