--- a/base_map.html
+++ b/base_map.html
@@ -25,8 +25,8 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 39.000, lng: -105.500},
-          zoom: 8
-           mapTypeId: google.maps.MapTypeId.TERRAIN
+          zoom: 8,
+          mapTypeId: google.maps.MapTypeId.TERRAIN
         });
         
       }
