--- a/lab4.html
+++ b/lab4.html
@@ -31,8 +31,11 @@
   {
     "elementType": "geometry",
     "stylers": [
+  {
+    "elementType": "geometry",
+    "stylers": [
       {
-        "color": "#212121"
+        "color": "#f5f5f5"
       }
     ]
   },
@@ -48,7 +51,7 @@
     "elementType": "labels.text.fill",
     "stylers": [
       {
-        "color": "#757575"
+        "color": "#616161"
       }
     ]
   },
@@ -56,7 +59,7 @@
     "elementType": "labels.text.stroke",
     "stylers": [
       {
-        "color": "#212121"
+        "color": "#f5f5f5"
       }
     ]
   },
@@ -65,32 +68,12 @@
     "elementType": "geometry",
     "stylers": [
       {
-        "color": "#757575"
-      },
-      {
         "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.country",
-    "elementType": "labels.text.fill",
-    "stylers": [
-      {
-        "color": "#9e9e9e"
       }
     ]
   },
   {
     "featureType": "administrative.land_parcel",
-    "stylers": [
-      {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "administrative.locality",
     "elementType": "labels.text.fill",
     "stylers": [
       {
@@ -108,6 +91,15 @@
   },
   {
     "featureType": "poi",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
     "elementType": "labels.text.fill",
     "stylers": [
       {
@@ -120,7 +112,7 @@
     "elementType": "geometry",
     "stylers": [
       {
-        "color": "#181818"
+        "color": "#e5e5e5"
       }
     ]
   },
@@ -129,33 +121,16 @@
     "elementType": "labels.text.fill",
     "stylers": [
       {
-        "color": "#616161"
-      }
-    ]
-  },
-  {
-    "featureType": "poi.park",
-    "elementType": "labels.text.stroke",
-    "stylers": [
-      {
-        "color": "#1b1b1b"
+        "color": "#9e9e9e"
       }
     ]
   },
   {
     "featureType": "road",
+    "elementType": "geometry",
     "stylers": [
       {
-        "visibility": "off"
-      }
-    ]
-  },
-  {
-    "featureType": "road",
-    "elementType": "geometry.fill",
-    "stylers": [
-      {
-        "color": "#2c2c2c"
+        "color": "#ffffff"
       }
     ]
   },
@@ -169,20 +144,19 @@
     ]
   },
   {
-    "featureType": "road",
-    "elementType": "labels.text.fill",
+    "featureType": "road.arterial",
     "stylers": [
       {
-        "color": "#8a8a8a"
+        "visibility": "off"
       }
     ]
   },
   {
     "featureType": "road.arterial",
-    "elementType": "geometry",
+    "elementType": "labels.text.fill",
     "stylers": [
       {
-        "color": "#373737"
+        "color": "#757575"
       }
     ]
   },
@@ -191,16 +165,33 @@
     "elementType": "geometry",
     "stylers": [
       {
-        "color": "#3c3c3c"
+        "color": "#dadada"
       }
     ]
   },
   {
-    "featureType": "road.highway.controlled_access",
-    "elementType": "geometry",
+    "featureType": "road.highway",
+    "elementType": "labels",
     "stylers": [
       {
-        "color": "#4e4e4e"
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#616161"
+      }
+    ]
+  },
+  {
+    "featureType": "road.local",
+    "stylers": [
+      {
+        "visibility": "off"
       }
     ]
   },
@@ -209,7 +200,7 @@
     "elementType": "labels.text.fill",
     "stylers": [
       {
-        "color": "#616161"
+        "color": "#9e9e9e"
       }
     ]
   },
@@ -222,11 +213,20 @@
     ]
   },
   {
-    "featureType": "transit",
-    "elementType": "labels.text.fill",
+    "featureType": "transit.line",
+    "elementType": "geometry",
     "stylers": [
       {
-        "color": "#757575"
+        "color": "#e5e5e5"
+      }
+    ]
+  },
+  {
+    "featureType": "transit.station",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
       }
     ]
   },
@@ -235,7 +235,7 @@
     "elementType": "geometry",
     "stylers": [
       {
-        "color": "#000000"
+        "color": "#c9c9c9"
       }
     ]
   },
@@ -244,7 +244,7 @@
     "elementType": "labels.text.fill",
     "stylers": [
       {
-        "color": "#3d3d3d"
+        "color": "#9e9e9e"
       }
     ]
   }
