--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<p><a href="hello-world.html">Hello World</a></p>
 		<p><a href="index_styled.html">Milestone 2</a></p>
 		<p><a href="base_map.html">Base Map, Milestone 3 </a></p>
+		<p><a href="lab4.html">Milestone4</a></p>
 		
 		<h2>Deep Dives</h2>
 		<p><a href="">Deep Dive 1</a></p>
