--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
 		<p><a href="lab4.html">Milestone4</a></p>
 		
 		<h2>Deep Dives</h2>
-		<p><a href="">Deep Dive 1</a></p>
+		<p><a href="DeepDive1.html">Deep Dive 1</a></p>
 	</body>
 </html>
