--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<p><a href="index_styled.html">Milestone 2</a></p>
 		<p><a href="base_map.html">Base Map, Milestone 3 </a></p>
 		<p><a href="lab4.html">Milestone4</a></p>
+		<p><a href="milestone8.html">Milestone 8</a></p>
 		
 		<h2>Deep Dives</h2>
 		<p><a href="DeepDive1.html">Deep Dive 1</a></p>
