--- a/Milestone14.html
+++ b/Milestone14.html
@@ -13,8 +13,8 @@
     <title>OpenLayers example</title>
 </head>
 <body>
-<h2>This map is of the area around the Mnt Fuji volcano. It will display geographic factors such as airports, ferry terminals, rail roads, water sources, and population centers.
-It is intended for use by the causual user who is interested in seeing how these features relate to Mount Fuji geographically. </h2>
+<h2>This map is of the area around the Mount Fuji volcano. It will display geographic factors such as airports, ferry terminals, railroads, water sources, and population centers.
+It is intended for use by the casual user who is interested in seeing how these features relate to Mount Fuji geographically. </h2>
 <div id="map" class="map"></div>
 <script type="text/javascript">
 
